# ChessInsights

./: .coverage  .env.example  .gitignore  LICENSE  README.md  app.py  chess_board.py  flake.nix  pyproject.toml  requirements.txt  setup.py
.github/workflows/: unit_tests.yaml
chess_insights/: chess_board.py  enum_file_and_rank.py  enum_ray_direction.py  locations.py
chess_insights.egg-info/: PKG-INFO  SOURCES.txt
chess_insights/chess_pieces/: black_pawn.py  chess_piece.py  white_king.py  white_pawn.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  activate.fish  activate.nu
src/chess_insights/: __init__.py  chess_board.py  enum_square.py
src/chess_insights/api/: app.py
src/chess_insights/chess_pieces/: black_pawn.py  chess_piece.py  king.py  pawn.py  white_king.py  white_pawn.py
src/chess_insights/engine/: bitboard.py  engine.py  move_generators.py
src/chess_insights/game/: board_state.py  castling.py  chess_board.py  pawn.py
src/chess_insights/util/: bitboard.py  enum_chess_piece_type.py  enum_ray_direction.py  enum_square.py  fen.py  flask_session_JSON_serializer.py  move_generators.py  pgn.py  serializers.py
test/: test_chess_board.py
tests/: run_tests_with_coverage.txt  test_black_pawn.py  test_chess_board.py  test_chess_piece.py  test_enum_ray_direction.py  test_white_king.py  test_white_pawn.py  venvSetup.txt
tests/chess_pieces/: test_black_pawn.py  test_white_king.py  test_white_pawn.py
tests/integration/: test_chess_game_api.py
tests/unit/chess_pieces/: test_king.py  (+3 more)
tests/util/: test_bitboard.py  test_enum_ray_direction.py
(+47 files in other folders)
