[project]
name = "chess_insights"
version = "1.0"
description = "A chess_insights learning tool."
authors= [{name= "Gabriel Knudtson"}]
readme= "README.md"
requires-python = ">= 3.10"
dependencies = [
"flask ~= 3.1.0",
"numpy ~= 2.2.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
parameterized = "^0.9.0"
pytest = "^8.3.4"

